[gd_scene load_steps=14 format=2]

[ext_resource path="res://enemies/soldier_factory.gd" type="Script" id=1]
[ext_resource path="res://enemies/gen_castleback.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/gen_castle.tscn" type="PackedScene" id=3]
[ext_resource path="res://sparks/brick_dust.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/gen_castlefront.tscn" type="PackedScene" id=5]
[ext_resource path="res://props/gen_whiteflag.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemies/factory.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/crumble.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/whip_crumble.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/stomp_crumble.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]

resource_name = "Crumble"
length = 2.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite/castle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, -39 ), Vector2( 1, -39 ), Vector2( 0, -39 ), Vector2( -1, -39 ), Vector2( 0, -39 ), Vector2( 0.5, -39 ), Vector2( 1, -39 ), Vector2( 0, -39 ), Vector2( -1, -39 ), Vector2( 0, -39 ), Vector2( 0.5, -39 ), Vector2( 1, -39 ), Vector2( 0, -39 ), Vector2( -1, -39 ), Vector2( 0, -39 ), Vector2( 0.5, -39 ), Vector2( 1, -39 ), Vector2( 0, -39 ), Vector2( -1, -39 ), Vector2( 0, -39 ), Vector2( 0.5, -39 ), Vector2( 1, -39 ), Vector2( 0, -39 ), Vector2( -1, -39 ), Vector2( 0, -39 ), Vector2( 0.5, -39 ), Vector2( 1, -39 ), Vector2( 0, -39 ), Vector2( -1, -39 ), Vector2( 0, -39 ), Vector2( 0.5, -39 ), Vector2( 1, -39 ), Vector2( 0, -39 ), Vector2( -1, -39 ), Vector2( 0, -39 ), Vector2( 0.5, -39 ), Vector2( 1, -39 ), Vector2( 0, -39 ), Vector2( -1, -39 ), Vector2( 0, -39 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "crumble_dust"
}, {
"args": [  ],
"method": "animate_fall"
}, {
"args": [  ],
"method": "remove_collision"
} ]
}

[sub_resource type="AudioStreamRandomPitch" id=2]

audio_stream = ExtResource( 9 )
random_pitch = 1.05

[sub_resource type="AudioStreamRandomPitch" id=3]

audio_stream = ExtResource( 10 )
random_pitch = 1.03

[node name="soldier_factory" type="KinematicBody2D"]

input_pickable = false
collision_layer = 15
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "collision" ]
knife_soldiers = 100
rifle_soldiers = 50
machine_gun_soldiers = 50
max_health = 1500

[node name="tween" type="Tween" parent="." index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="sprite" type="Node2D" parent="." index="1"]

editor/display_folded = true

[node name="back_castle" parent="sprite" index="0" instance=ExtResource( 2 )]

position = Vector2( 0, -39 )

[node name="castle" parent="sprite" index="1" instance=ExtResource( 3 )]

position = Vector2( 0, -39 )
_sections_unfolded = [ "Transform" ]

[node name="brick_dust_left" parent="sprite" index="2" instance=ExtResource( 4 )]

position = Vector2( -25, -18 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="brick_dust_right" parent="sprite" index="3" instance=ExtResource( 4 )]

position = Vector2( 42, -18 )
rotation = 4.46638e-06

[node name="front_castle" parent="sprite" index="4" instance=ExtResource( 5 )]

position = Vector2( 0, -39 )

[node name="left_spawn" type="Position2D" parent="." index="2"]

position = Vector2( -19, 7 )
_sections_unfolded = [ "Transform" ]

[node name="right_spawn" type="Position2D" parent="." index="3"]

position = Vector2( 40, 7 )
_sections_unfolded = [ "Transform" ]

[node name="whiteflag" parent="." index="4" instance=ExtResource( 6 )]

visible = false
position = Vector2( -45, -76 )

[node name="collision" type="CollisionPolygon2D" parent="." index="5"]

build_mode = 0
polygon = PoolVector2Array( 8, -45, 31, -45, 27, 8, -15, 9, -19, -18, 8, -18 )

[node name="factory" parent="." index="6" instance=ExtResource( 7 )]

visible = false
spawn_mode = 2

[node name="crumble" type="AudioStreamPlayer2D" parent="." index="7"]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "SoundFX"
area_mask = 0

[node name="crumble_anim" type="AnimationPlayer" parent="." index="8"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Crumble = SubResource( 1 )
blend_times = [  ]

[node name="whip_crumble" type="AudioStreamPlayer2D" parent="." index="9"]

stream = SubResource( 2 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="stomp_crumble" type="AudioStreamPlayer2D" parent="." index="10"]

stream = SubResource( 3 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "SoundFX"
area_mask = 1


